--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-parallax-tilt": "^1.7.256",
     "react-tilt": "^1.0.2",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1"
